# cut-above-questions

./: README.md  index.html  index2.html  requirements.txt  setup.cfg
data/json_datasets/: training_data.json  transcript_data.json  transcript_metadata.json
data/transcripts/: 2023-01-05 _ Sigal Samuel + Martha Nussbaum _ The Gray Area _ PUBLIC TRANSCRIPT.txt  2023-01-12 _ Sean Illing + Thomas Chatterton Williams _ The Gray Area _ PUBLIC TRANSCRIPT.txt  2023-01-19 _ Sean Illing + Jerusalem Demsas _ The Gray Area _ PUBLIC TRANSCRIPT.txt  2023-01-23 _ Sigal Samuel + Holden Karnofsky _ The Gray Area _ PUBLIC TRANSCRIPT.txt  2023-01-30 _ Sean Illing + Noah Hawley _ TGA _ PUBLIC TRANSCRIPT.txt  2023-02-06 _ Fabiola Cineas + Derecka Purnell _ TGA _ PUBLIC TRANSCRIPT.txt  2023-02-09 _ Sean Illing + Rosa Brooks _ TGA _ PUBLIC TRANSCRIPT.txt  2023-02-13 _ Rebecca Jennings + Justin Charity _ TGA _ PUBLIC TRANSCRIPT.txt  2023-02-23 _ Sean Illing + Matt McManus _ TGA _ PUBLIC TRANSCRIPT.txt  2023-03-02 _ Sean Illing + Vienna Pharaon _ TGA _ PUBLIC TRANSCRIPT.txt
questions/: extraction.py  generative.py  language.py  transcipt.py
scripts/: run.py
src/: extraction.py  generative.py
src/questions/: files.py  generative.py  language.py  transcipt.py
tests/: test_extraction.py  test_preprocessing.py  test_question_generation.py
