[metadata]
name = questions
version = 1.0
author = Alexander Ruthe
description = Question Optimization Example Library
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:

[options.packages.find]
include = src